--- a/cmd/sftpslurper/app/pages/home.html
+++ b/cmd/sftpslurper/app/pages/home.html
@@ -15,7 +15,8 @@
          <th scope="col" style="width: 16px;">&nbsp;</th>
          <th scope="col" style="width: 60%;">Name</th>
          <th scope="col" style="width: 20%;">Date</th>
-         <th scope="col" style="width: 20%;">Size</th>
+         <th scope="col" style="width: 19%;">Size</th>
+         <th scope="col" style="width: 16px;">Actions</th>
       </tr>
    </thead>
    <tbody>
@@ -27,7 +28,7 @@
                .. <i class="icon icon-up-dir" style="width: 16px; height: 16px;"></i>
             </a>
          </th>
-         <td span="2">&nbsp;</td>
+         <td colspan="3">&nbsp;</td>
       </tr>
       {{end}}
       {{range .Files}}
@@ -47,6 +48,12 @@
          </th>
          <td>{{.Date}}</td>
          <td>{{.Size}}</td>
+         <td>
+            <a href="javascript:void(0)" class="deleteLink" data-root="{{$.Root}}" data-name="{{.Name}}"
+               data-isdir="{{.IsDirectory}}">
+               <i class="icon icon-trash" alt="Delete {{.Name}}" title="Delete {{.Name}}"></i>
+            </a>
+         </td>
       </tr>
       {{end}}
    </tbody>
